--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    padding: 0;
+    margin: 0;
+}
 .navs{
     display: flex;
     flex-direction: row;
@@ -18,4 +22,26 @@
 
 .react-logo{
     width: 80px;
+}
+
+.header{
+    width: 100%;
+    box-shadow: 0.05px 2px rgba(0, 0, 0, 0.2);
+}
+
+.main-content{
+    margin: 25px;
+    padding: 10px;
+}
+
+.footer{
+    background-color: black;
+    color: white;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
